scripts/app-1-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-poc-deploy-alpha
  labels:
    app: aks-poc-deploy-alpha
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alpha
  template:
    metadata:
      labels:
        app: alpha
    spec:
      containers:
        - name: aks-poc-container-alpha
          image: akspocreg.azurecr.io/akspoc:alpha
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: aks-poc-service-alpha
  labels:
    app: aks-poc-service-alpha
spec:
  type: ClusterIP
  selector:
    app: alpha
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
