scripts/app-2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-poc-deploy-beta
  labels:
    app: aks-poc-deploy-beta
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beta
  template:
    metadata:
      labels:
        app: beta
    spec:
      containers:
        - name: aks-poc-container-beta
          image: akspocreg.azurecr.io/akspoc:beta
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: aks-poc-service-beta
  labels:
    app: aks-poc-service-beta
spec:
  type: ClusterIP
  selector:
    app: beta
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
