scripts/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akspoc-ingress
  namespace: alpha-beta-ns
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  rules:
    - http:
        paths:
          - path: /alpha
            pathType: Prefix
            backend:
              service:
                name: aks-poc-service-alpha
                port:
                  number: 80
    - http:
        paths:
          - path: /beta
            pathType: Prefix
            backend:
              service:
                name: aks-poc-service-beta
                port:
                  number: 80
