scripts/test-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akspoc-ingress
  namespace: default
  annotations:
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /alpha(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-poc-service-alpha
                port:
                  number: 80
    - http:
        paths:
          - path: /beta(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-poc-service-beta
                port:
                  number: 80
