scripts/working-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akspoc-ingress
  # annotations:
  #   kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: aks-poc-service-beta
                port:
                  number: 80
            pathType: Prefix
